# trimmer-derive

./: .travis.yml  Cargo.toml  LICENSE-MIT  README.md  vagga.yaml
src/: lib.rs  new_types.rs  structs.rs
