[package]
name = "trimmer_derive"
description = """
    A derive macro that allows to expose rust structures to trimmer template.
"""
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["template", "derive"]
categories = ["template-engine"]
homepage = "https://github.com/tailhook/trimmer-derive"
documentation = "https://docs.rs/trimmer_derive"
version = "0.1.0"
authors = ["paul@colomiets.name"]

[lib]
proc-macro = true

[dependencies]
syn = "0.11.11"
quote = "0.3.15"

[dev-dependencies]
trimmer = { version="0.3.5", default-features=false }
